Вносит правки и добавляет стили

--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
               <a class="item-link" href="#">О Седоне</a>
             </li>
             <li class="main-nav-item">
-              <a class="item-link" href="catalog.html" aria-current="page">Гостиницы</a>
+              <a class="item-link item-link-current" href="catalog.html" aria-current="page">Гостиницы</a>
             </li>
           </ul>
           <ul class="user-nav-list">
@@ -168,7 +168,7 @@
               </p>
               <p class="item-rating">Рейтинг: <span class="rating-number">9,2</span></p>
             </li>
-            <li class="card-item">
+            <li class="cards-item">
               <a class="item-image-link" href="#" tabindex="-1">
                 <img class="item-image" src="images/catalog/hotel-desert.jpg" alt="Красные каменные скалы рядом с Седоной" width="300" height="212">
               </a>
@@ -184,7 +184,7 @@
               </p>
               <p class="item-rating">Рейтинг: <span class="rating-number">6,9</span></p>
             </li>
-            <li class="card-item">
+            <li class="cards-item">
               <a class="item-image-link" href="#" tabindex="-1">
                 <img class="item-image" src="images/catalog/hotel-greentree.jpg" alt="Звёздное небо над скалистым плато" width="300" height="212">
               </a>
